--- a/EducationAlarm/EducationAlarm/Views/Alarm/SubjectLanguage.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Alarm/SubjectLanguage.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserLanguageAnswers
+﻿@model UserAnswers
 @using EducationAlarm.ViewModels;
 @using Microsoft.AspNet.Identity;
 @using EducationAlarm.Models;
@@ -13,9 +13,11 @@
 <h2>SubjectLanguage</h2>
 
     <h3>Please type or paste the correct answer in the textbox</h3>
-@using (Html.BeginForm())
-    {
+@using (Html.BeginForm("SubjectPost","Alarm",FormMethod.Post))
+//update the beginform to postback to subject
+{
 
+    @Html.HiddenFor(x=>x.AlarmId)
     <div class="form-horizontal">
 
         <div class="form-group">
@@ -29,8 +31,8 @@
                 }
             }
             <div class="col-md-5">
-                @Html.EditorFor(model => model.Answer1, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Answer1, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.LangAnswer1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LangAnswer1, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -44,8 +46,8 @@
                 }
             }
             <div class="col-md-5">
-                @Html.EditorFor(model => model.Answer2, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Answer2, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.LangAnswer2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LangAnswer2, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -59,8 +61,8 @@
                 }
             }
             <div class="col-md-5">
-                @Html.EditorFor(model => model.Answer3, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Answer3, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.LangAnswer3, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LangAnswer3, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -74,8 +76,8 @@
                 }
             }
             <div class="col-md-5">
-                @Html.EditorFor(model => model.Answer4, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Answer4, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.LangAnswer4, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LangAnswer4, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -86,3 +88,4 @@
         
     </div>
 }
+@*<i>&#10004;<br />x </i>*@
