BH geeting there

--- a/EducationAlarm/EducationAlarm/Views/Alarm/Edit.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Alarm/Edit.cshtml
@@ -1,18 +1,11 @@
-﻿@model EducationAlarm.ViewModels.AlarmSet
-
-@{
-    ViewBag.Title = "AlarmSet";
-}
-
-
-
+﻿@model EducationAlarmDb.UserTime
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
     
+    <div class="form-horizontal">
+      
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -25,18 +18,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
-@if (ViewBag.Error == true)
-{
-    <strong> You can only make 5 alarms </strong>
-}
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
