--- a/EducationAlarm/EducationAlarm/Views/Account/ConfirmEmail.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,34 @@
-﻿@{
-    ViewBag.Title = "Confirm Email";
+﻿@model EducationAlarm.Models.EmailConfirmation
+
+@{
+    ViewBag.Title = "ConfirmEmail";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div>
-    <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<h2>ConfirmEmail</h2>
+<strong>@ViewBag.Message </strong>
+@using (Html.BeginForm()) 
+{
+    @Html.AntiForgeryToken()
+    
+<div class="form-horizontal">
+    <h4>EmailConfirmation</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Id)
+    <div class="form-group">
+        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
 </div>
+}
+
+
