--- a/EducationAlarm/EducationAlarm/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -7,7 +7,8 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Please check your email for a code and @Html.ActionLink("click here","ResetPassword")
+        to reset your password
     </p>
 </div>
 	
