--- a/EducationAlarm/EducationAlarm/Views/Account/Register.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Account/Register.cshtml
@@ -1,25 +1,9 @@
 ﻿@model EducationAlarm.Models.RegisterViewModel
-    @*@using EducationAlarm.ViewModels
-    @using EducationAlarmDb*@
 @{
     ViewBag.Title = "Register";
-    //ViewDbLookups db = new ViewDbLookups();
-    //int val = 0;
-    //var Subject = new SelectList(db.GetCategory(val), "SubjectId", "SubjectName");
 
 }
-@*<style>
-    #subject{
-        display:none;
-    }
-</style>
-<script>
-    $('#category').on("keypress", function () {
-        var value = $('#category').val();
-        @val=value
-       $('#subject').show()
-    })
-</script>*@
+
 
 <h2>@ViewBag.Title.</h2>
 
@@ -49,11 +33,11 @@
     </div>
     //error getting thrown needs work
     @*<div class="form-group" id="category">
-        @Html.LabelFor(m => m.SubjectCategory, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.DropDownList("SubjectCategory", null, htmlAttributes: new { @class = "form-control" })
-        </div>
-    </div>*@
+            @Html.LabelFor(m => m.SubjectCategory, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.DropDownList("SubjectCategory", null, htmlAttributes: new { @class = "form-control" })
+            </div>
+        </div>*@
 
     <div class="form-group" id="subject">
         @Html.LabelFor(m => m.SubjectId, new { @class = "col-md-2 control-label" })
@@ -61,7 +45,12 @@
             @Html.DropDownList("SubjectId", null, htmlAttributes: new { @class = "form-control" })
         </div>
     </div>
-
+    <div class="form-group" id="subject">
+        @Html.LabelFor(m => m.TimeZone, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownList("TimeZone", null, htmlAttributes: new { @class = "form-control" })
+        </div>
+    </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
