--- a/EducationAlarm/EducationAlarm/Views/Account/ResetPassword.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Account/ResetPassword.cshtml
@@ -36,7 +36,7 @@
         </div>
     </div>
 }
-
+@Html.ValidationMessage("error")
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
