--- a/EducationAlarm/EducationAlarm/Views/Alarm/SubjectLanguage.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Alarm/SubjectLanguage.cshtml
@@ -1,33 +1,37 @@
 ﻿@model UserAnswers
 @using EducationAlarm.ViewModels;
-@using Microsoft.AspNet.Identity;
-@using EducationAlarm.Models;
-@{
-    ForeignWordsImport fwi = new ForeignWordsImport();
-    ViewDbLookups db = new ViewDbLookups();
-    string id = User.Identity.GetUserId();
-    string subject = db.FindSubject(id);
-    ViewBag.Title = "SubjectLanguage";
-}
+
+@{ViewBag.Title = "SubjectLanguage"; }
 
 <h2>SubjectLanguage</h2>
+<h3>Please type or paste the correct answer in the textbox</h3>
+<style>
+    form {
+        float: left;
+        width: 50%
+    }
 
-    <h3>Please type or paste the correct answer in the textbox</h3>
-@using (Html.BeginForm("SubjectPost","Alarm",FormMethod.Post))
-//update the beginform to postback to subject
+    #checkX {
+        float: right;
+        width: 50%;
+    }
+</style>
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/jqueryunobtrusive")
+
+@using (Ajax.BeginForm("Subject", "Alarm", new AjaxOptions { UpdateTargetId = "checkOrX" }))
 {
 
-    @Html.HiddenFor(x=>x.AlarmId)
+    @Html.HiddenFor(x => x.AlarmId)
     <div class="form-horizontal">
-
         <div class="form-group">
             @{
-                var list = fwi.ShuffledList(id);
-                <p> 1) @list[0]</p>
-                for (int j = 1; j < list.Count; j++)
+                var list1 = ViewBag.LangList1;
+                <p> 1) @list1[0]</p>
+                for (int j = 1; j < list1.Count; j++)
                 {
                     @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
-                    <p> @list[j] </p>
+                    <p> @list1[j] </p>
                 }
             }
             <div class="col-md-5">
@@ -37,13 +41,13 @@
         </div>
         <div class="form-group">
             @{
-                var list2 = fwi.ShuffledList(id);
-                <p> 2) @list2[0]</p>
-                for (int j = 1; j < list2.Count; j++)
-                {
-                    @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
-                    <p> @list2[j] </p>
-                }
+                var list2 = ViewBag.LangList2;
+<p> 2) @list2[0]</p>
+for (int j = 1; j < list2.Count; j++)
+{
+    @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
+    <p> @list2[j] </p>
+}
             }
             <div class="col-md-5">
                 @Html.EditorFor(model => model.LangAnswer2, new { htmlAttributes = new { @class = "form-control" } })
@@ -52,13 +56,13 @@
         </div>
         <div class="form-group">
             @{
-                var list3 = fwi.ShuffledList(id);
-                <p> 3) @list3[0]</p>
-                for (int j = 1; j < list3.Count; j++)
-                {
-                    @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
-                    <p> @list3[j] </p>
-                }
+                var list3 = ViewBag.LangList3;
+<p> 3) @list3[0]</p>
+for (int j = 1; j < list3.Count; j++)
+{
+    @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
+    <p> @list3[j] </p>
+}
             }
             <div class="col-md-5">
                 @Html.EditorFor(model => model.LangAnswer3, new { htmlAttributes = new { @class = "form-control" } })
@@ -67,13 +71,13 @@
         </div>
         <div class="form-group">
             @{
-                var list4 = fwi.ShuffledList(id);
-                <p> 4) @list4[0]</p>
-                for (int j = 1; j < list4.Count; j++)
-                {
-                    @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
-                    <p> @list4[j] </p>
-                }
+                var list4 = ViewBag.LangList4;
+<p> 4) @list4[0]</p>
+for (int j = 1; j < list4.Count; j++)
+{
+    @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
+    <p> @list4[j] </p>
+}
             }
             <div class="col-md-5">
                 @Html.EditorFor(model => model.LangAnswer4, new { htmlAttributes = new { @class = "form-control" } })
@@ -85,7 +89,8 @@
                 <input type="submit" value="Submit" class="btn btn-default" />
             </div>
         </div>
-        
+
     </div>
 }
 @*<i>&#10004;<br />x </i>*@
+<div id="checkOrX"></div>
