--- a/EducationAlarm/EducationAlarm/Views/Alarm/SubjectMath.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Alarm/SubjectMath.cshtml
@@ -4,14 +4,10 @@
 
 <h2>Subject Math</h2>
 
-<h3>Please type or paste the correct answer in the textbox</h3>
+<h3>Please type the correct answer in the textbox</h3>
 
+    @{ViewBag.Title = "KnowledgeSolve"; }
 
-@{
-
-    ViewBag.Title = "KnowledgeSolve";
-
-}
 <style>
     form {
         float: left;
@@ -33,15 +29,8 @@
 <div class="form-horizontal">
     <div class="form-group">
         @{var list = ViewBag.MathList1;
-            //int x1 = Convert.ToInt32(list[0]);
-            //int y1 = Convert.ToInt32(list[2]);
-
-            <p>1)@list[0] @list[1] @list[2]</p>
-            for (int j = 3; j < list.Count; j++)
-            {
-                @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
-                <p> @list[j] </p>
-            }
+   
+            <p>1)@list[0] @list[1] @list[2]</p>       
         }
 
         <div class="col-md-5">
@@ -56,11 +45,6 @@
 
 
             <p>2)@list2[0] @list2[1] @list2[2] </p>
-            for (int j = 3; j < list2.Count; j++)
-            {
-                @*<p>@Html.RadioButton("Guess", list[j], mp.Guess)</p>*@
-                <p> @list2[j] </p>
-            }
         }
 
         <div class="col-md-5">
@@ -74,10 +58,7 @@
     <div class="form-group">
         @{ var list3 = ViewBag.MathList3;
             <p>3)@list3[0] @list3[1] @list3[2]</p>
-            for (int j = 3; j < list3.Count; j++)
-            {
-                <p> @list3[j] </p>
-            }
+
         }
         <div class="col-md-5">
             @Html.EditorFor(model => model.MathAnswer3, new { htmlAttributes = new { @class = "form-control" } })
@@ -89,10 +70,7 @@
     <div class="form-group">
         @{ var list4 = ViewBag.MathList4;
             <p>4)@list4[0] @list4[1] @list4[2] </p>
-            for (int j = 3; j < list4.Count; j++)
-            {
-                <p>@list4[j] </p>
-            }
+
         }
         <div class="col-md-5">
             @Html.EditorFor(model => model.MathAnswer4, new { htmlAttributes = new { @class = "form-control" } })
