--- a/EducationAlarm/EducationAlarm/Views/Home/Index.cshtml
+++ b/EducationAlarm/EducationAlarm/Views/Home/Index.cshtml
@@ -1,5 +1,52 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
-}
+    Layout = null;
 
-<h2>Hello there</h2>
+}
+<style>
+    body {
+        background-image: url("https://images.unsplash.com/photo-1559891272-8a206fbc5c0e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGFsYXJtJTIwY2xvY2tzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" );
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+
+    strong {
+        font-size: 30px;
+        padding: 30px;       
+    }
+    a{
+        color:springgreen;
+       
+    }
+    #s1 {
+        margin: 350px;
+        margin-right: 660px; 
+       
+    }
+
+    #s2 {
+        margin: 90px;
+        margin-right: 90px;
+    }
+
+    h1 {
+        margin: 240px;
+       margin-left:270px;
+        font-size:100px;
+        color:springgreen;
+        margin-bottom:30px;           
+    }
+    h2{
+        margin-left:480px;
+        margin-top:36px;
+        font-size:50px;
+        color:springgreen;
+    }
+</style>
+<h1>EducationAlarm.com</h1>
+<h2>Let your alarm be educational</h2>
+<strong id="s1"> @Html.ActionLink("Login", "Login", "Account")</strong>
+@if (User.Identity.IsAuthenticated == false)
+{
+    <strong id="s2">  @Html.ActionLink("Register a new account", "Register", "Account")</strong>
+}
